--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/3f3RzGgi9KeZTF6WOAIximd6nM9Q-ndSRgYiW2R2DLRMwAlbkneBmb5HcLL9KVi_WfQve6bvMfv4h4oIZlWRJYMJ.png" />
+    <link rel="icon" href="lh8god1e2_A.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Simple Fortnite.shop" />
